# ScalableCorrelationClustering

./: CMakeLists.txt  LICENSE  README.md  compile_withcmake.sh
app/: configuration.h  evaluator.cpp  graphchecker.cpp  parse_parameters.h  signed_graph_clustering.cpp  signed_graph_clustering_evolutionary.cpp
deploy/: evaluator  graphchecker  signed_graph_clustering  signed_graph_clustering_evolutionary
lib/: definitions.h
lib/algorithms/: cycle_search.cpp  strongly_connected_components.cpp
lib/clustering/: signed_graph_clusterer.cpp  signed_graph_clusterer.h
lib/clustering/coarsening/: coarsening.cpp  contraction.cpp  contraction.h
lib/clustering/coarsening/clustering/: node_ordering.h  size_constraint_label_propagation.cpp  size_constraint_label_propagation.h
lib/clustering/coarsening/stop_rules/: stop_rules.h
lib/clustering/uncoarsening/: uncoarsening.cpp  uncoarsening.h
lib/clustering/uncoarsening/refinement/: refinement.cpp  refinement.h
lib/clustering/uncoarsening/refinement/kway_graph_refinement/: kway_graph_refinement.cpp  kway_graph_refinement.h  kway_graph_refinement_commons.h  kway_graph_refinement_core.cpp  kway_graph_refinement_core.h  multitry_kway_fm.cpp  multitry_kway_fm.h
lib/clustering/uncoarsening/refinement/label_propagation_refinement/: label_propagation_refinement.cpp  label_propagation_refinement.h
lib/clustering/uncoarsening/refinement/quotient_graph_refinement/: complete_boundary.cpp  complete_boundary.h  quotient_graph_refinement.cpp  quotient_graph_refinement.h
lib/clustering/uncoarsening/refinement/quotient_graph_refinement/2way_fm_refinement/: partition_accept_rule.h  two_way_fm.cpp  two_way_fm.h  vertex_moved_hashtable.h
lib/clustering/uncoarsening/refinement/quotient_graph_refinement/quotient_graph_scheduling/: active_block_quotient_graph_scheduler.cpp  active_block_quotient_graph_scheduler.h  quotient_graph_scheduling.h
lib/clustering_evolutionary/: diversifyer.h  evolutionary_signed_graph_clusterer.cpp  evolutionary_signed_graph_clusterer.h  population.cpp  population.h
lib/clustering_evolutionary/exchange/: exchanger.cpp  exchanger.h
lib/data_structure/: graph_access.h  graph_hierarchy.cpp  graph_hierarchy.h
lib/io/: graph_io.cpp  graph_io.h  mmap_graph_io.h
lib/parallel_mh/: parallel_mh_async.cpp  population.cpp
lib/parallel_mh/exchange/: exchanger.cpp
lib/partition/: graph_partitioner.cpp  partition_config.h
lib/partition/coarsening/: coarsening.cpp
lib/partition/coarsening/clustering/: node_ordering.h  size_constraint_label_propagation.cpp  size_constraint_label_propagation.h
lib/partition/coarsening/matching/: matching.cpp  random_matching.cpp
lib/partition/coarsening/matching/gpa/: gpa_matching.cpp  path_set.h
lib/partition/initial_partitioning/: initial_node_separator.cpp  initial_partition_bipartition.cpp  initial_partitioning.cpp
lib/partition/initial_partitioning/initial_refinement/: initial_refinement.cpp
lib/partition/uncoarsening/: uncoarsening.h
lib/partition/uncoarsening/refinement/cycle_improvements/: augmented_Qgraph_fabric.cpp
lib/partition/uncoarsening/refinement/kway_graph_refinement/: kway_graph_refinement_commons.cpp
lib/partition/uncoarsening/refinement/label_propagation_refinement/: label_propagation_refinement.cpp
lib/partition/uncoarsening/refinement/quotient_graph_refinement/2way_fm_refinement/: two_way_fm.cpp
lib/partition/uncoarsening/refinement/tabu_search/: tabu_search.h
lib/partition/w_cycles/: wcycle_partitioner.cpp
lib/tools/: quality_metrics.cpp  quality_metrics.h  random_functions.h
tools/: tools.cpp  tools.h
